--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Vladimir Kondaurov",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "grammy": "^1.18.1",
