--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "grammy": "^1.18.1",
-    "mysql2": "^3.6.0",
-    "nodemon": "^3.0.1"
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "browser-sync": "^2.28.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.59.2"
+    "sass": "^1.59.2",
+		"nodemon": "^3.0.1"
   }
 }
