--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "grammy": "^1.18.1",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "telegraf": "^4.14.0"
   },
   "devDependencies": {
     "browser-sync": "^2.28.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-sass": "^5.1.0",
-    "sass": "^1.59.2",
-		"nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sass": "^1.59.2"
   }
 }
