--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Vladimir Kondaurov",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "grammy": "^1.18.1",
